--- a/baitap-buoi5/baitapnhom.html
+++ b/baitap-buoi5/baitapnhom.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Elderflower</h1>
-    <div id="content">
-        <h2>custom signage</h2>
-        <div id="cost">Cost:$5 per title</div>
-    </div>
-    <script src="/shorthand-variable.js"></script> 
+    <style>
+       h1{
+           color: blue;
+           text-align: center;
+       }
+    </style>
+    <h1><em><strong><u>tieu de</u></strong></em></h1>
 </body>
 </html>
