--- a/lesson2/shorthand-variable.html
+++ b/lesson2/shorthand-variable.html
@@ -13,6 +13,6 @@
       <div id="cost">Cost: $5 per tile</div>
       <img src="/image/preview.jpg" alt="Sign" />
     </div>
-    <script src="/shorthand-variable.js"></script>
+    <script src="/lesson2/shorthand-variable.js"></script>
 </body>
 </html>
