--- a/lesson2/string-with-quotes.html
+++ b/lesson2/string-with-quotes.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Elderflower</h1>
     <div id="content">
-        <div id="title">Howdy <span id="name">friend</span>!</div>
-        <div id="note">Take a look around....</div>
+      <div id="title">Special Offers</div>
+      <div id="note">Sign-up to receive personalized offers!</div>
     </div>
-    <script src="/string-variable.js"></script>
+    <script src="/lesson2/string-with-quotes.js"></script>
 </body>
 </html>
