--- a/lesson2/boolean-variable.html
+++ b/lesson2/boolean-variable.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/lesson2.css">
+    <link rel="stylesheet" href="/lesson2/lesson2.css">
 </head>
 <body>
-    <h1>Elderflower</h1>
+   <img src="/image/elderflower-logo.png" alt="">
     <div id="content">
       <div class="message">Available: <span id="stock"></span></div>
       <div class="message">Shipping: <span id="shipping"></span></div>
     </div>
-    <script src="/update-variable.js"></script>
+    <script src="/lesson2/boolean-variable.js"></script>
 </body>
 </html>
