--- a/lesson2/update-array.html
+++ b/lesson2/update-array.html
@@ -11,6 +11,6 @@
     <div id="content">
       <div class="message">Color: <span id="colors">We were unable to find your color choice. Please try again...</span></div>
     </div>
-    <script src="/update-array.js"></script>
+    <script src="/lesson2/update-array.js"></script>
 </body>
 </html>
