--- a/lesson2/update-variable.html
+++ b/lesson2/update-variable.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="/lesson2.css">
 </head>
 <body>
-   <img src="/image/elderflower-logo.png" alt="">
+    <h1>Elderflower</h1>
     <div id="content">
       <div class="message">Available: <span id="stock"></span></div>
       <div class="message">Shipping: <span id="shipping"></span></div>
     </div>
-    <script src="/boolean-variable.js"></script>
+    <script src="/lesson2/update-variable.js"></script>
 </body>
 </html>
