--- a/lesson3/object-literal.html
+++ b/lesson3/object-literal.html
@@ -9,8 +9,16 @@
 </head>
 <body>
     <h1>TravelWorthy</h1>
-    <div id="message">Welcome to our site!</div>
-    <script src="/lesson3/basic-function.js"></script>
-    <script src="/lesson3/basic-function2.js"></script>
+    <div id="info">
+      <h2>hotel availability</h2>
+      <div id="hotelName"></div>
+      <div id="availability">
+        <p id="rooms"></p>
+        <p>rooms left</p>
+      </div>
+    </div>
+    <script src="/lesson3/object-literal.js"></script>
+    <script src="/lesson3/object-literal2.js"></script>
+   
 </body>
 </html>
