--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -42,7 +42,7 @@
                     <h1>    Hello ,Welcome To My official Website
                     <p>    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>   
-                    <button class="btn btn-outline-secondary btn-lg" onclick="display()">See more</button>   </h1>  
+                    <button class="btn btn-outline-secondary btn-lg">See more</button>   </h1>  
                 </div>
             </div>
     </header>
